# Port-Royal

./: CMakeLists.txt  README.md
include/: Attribute.h  Concept.h  FormalContext.h  Object.h  Parser.h
src/: Attribute.cpp  Concept.cpp  FormalContext.cpp  Object.cpp  Parser.cpp  main.cpp
